--- a/index.html
+++ b/index.html
@@ -1,21 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Momentum App</title>
 </head>
 <body>
-    <form id="LoginForm">
+    <form id="LoginForm" class="hidden">
         <input 
-        required 
-        maxlength="15" 
-        type="text" 
-        placeholder="What is your name?" />
-        <button>Log In</button>
+            required 
+            maxlength="15" 
+            type="text" 
+            placeholder="What is your name?" 
+        />
+        <input type="submit" value="Log In" />
     </form>
-    <script src="app.js"></script>
+    <h1 id="greeting" class="hidden"></h1>
+    
+    <h2 id="clock">00:00:00</h2>s
+
+    <div id="quote">
+        <span></span> 
+        <span></span>
+    </div>
+
+
 </body>
+    <script src="js/greetings.js"></script>
+    <script src="js/clock.js"></script>
+    <script src="js/quote.js"></script>
+    <script src="js/background.js"></script>
 </html>
