--- a/todolist/index.html
+++ b/todolist/index.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="reset.css">
+  <!-- <link rel="stylesheet" href="reset.css"> -->
   <link rel="stylesheet" href="style.css">
   <title>제목 뭐라고 하싈?</title>
 </head>
 <body>
-<div class="bgImgs">
+  <img class="bgImgs">
+  <div>
   <!-- 로그인 페이지 -->
   <form id="worldForm">
     <h1 id="worldInfo">Enter World Name:</h1>
@@ -29,34 +30,42 @@
     <br>
     <input type="submit" value="submit!">
   </form>
+  
   <!-- 인사말 -->
   <h1 id="greeting" class="hidden">wellcome</h1>
+  
   <!--시간  -->
   <h1 id="clock" class="hidden">00:00:00</h1>
+  
   <!-- 명언_랜덤값 -->
   <div id="quote">
     <span></span>
     <span></span>
   </div>
+  
   <!--todo_list -->
-  <form id="todo-form">
-    <input
-      required 
-      type="text" 
-      placeholder="todo wright" />
-  </form>
-  <ul id="todo-list"></ul>
-  <!-- 날씨 API 연동 -->
+  <div id="todo-box" style="display: inline-block;">
+    <form id="todo-form">
+      <input
+        required 
+        type="text" 
+        placeholder="todo wright" />
+    </form>
+  
+    <ul id="todo-list"></ul>  
+  </div>
+  
+  <!-- 날씨 API 연동 -->  
   <div id="weather">
     <span></span>
-    <span></span>
+    <span></span>  
   </div>
-</div>
+
   <!-- js 코드 -->
   <script src="js/greeting.js"></script>
   <script src="js/clock.js"></script>
   <script src="js/quotes.js"></script>
-  <script src="js/bgimgs.js"></script>
+  <!-- <script src="js/bgimgs.js"></script> -->
   <script src="js/todo.js"></script>
   <script src="js/weather.js"></script>
 </body>
