--- a/todolist/index.html
+++ b/todolist/index.html
@@ -4,29 +4,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <link rel="stylesheet" href="reset.css"> -->
   <link rel="stylesheet" href="style.css">
-  <title>제목 뭐라고 하싈?</title>
+  <title>MY TODO LIST</title>
 </head>
 <body>
-  <img class="bgImgs">
   <div>
   <!-- 로그인 페이지 -->
   <form id="worldForm">
-    <h1 id="worldInfo">Enter World Name:</h1>
+    <h1 id="loginInput">Enter Your Name</h1>
     <input 
       required
       type="text" 
-      placeholder="create your world!">
-    <br>
-    <input type="submit" value="submit!" />
-  </form>
-  <form id="characterForm" class="hidden">
-    <h1 id="characterInfo">Enter character Name:</h1>
-    <input 
-      required
-      type="text" 
-      placeholder="create your character!" />
+      placeholder="wright your name" />
     <br>
     <input type="submit" value="submit!">
   </form>
@@ -60,13 +49,5 @@
     <span></span>
     <span></span>  
   </div>
-
-  <!-- js 코드 -->
-  <script src="js/greeting.js"></script>
-  <script src="js/clock.js"></script>
-  <script src="js/quotes.js"></script>
-  <!-- <script src="js/bgimgs.js"></script> -->
-  <script src="js/todo.js"></script>
-  <script src="js/weather.js"></script>
 </body>
 </html>
