--- a/toddlist-re/index.html
+++ b/toddlist-re/index.html
@@ -29,13 +29,26 @@
     </div>
 
     <!-- 안내문 -->
+    <div id="quote">
+        <span></span>
+        <span></span>
+    </div>
     
-
     <!-- 메인 컨텐츠 (todo-list) -->
+    <form id="todo-form">
+        <input 
+            type="text"
+            required
+            id = "todoInput"        
+        >
+        <input type="submit" value="저장">
+    </form>
+    <div id="todo-box"></div>
     
     <script src="js/greating.js"></script>
     <script src="js/bg.js"></script>
     <script src="js/clock.js"></script>
-    <script src="js/notice.js"></script>
+    <script src="js/quote.js"></script>
+    <script src="js/todo-list.js"></script>
 </body>
 </html>
