--- a/toddlist-re/index.html
+++ b/toddlist-re/index.html
@@ -41,9 +41,9 @@
             required
             id = "todoInput"        
         >
-        <input type="submit" value="저장">
+        <!-- <input type="submit" value="저장"> -->
     </form>
-    <div id="todo-box"></div>
+    <ul id="todo-list"></ul>
     
     <script src="js/greating.js"></script>
     <script src="js/bg.js"></script>
