--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 
+    <!-- bootstrap 연동 -->
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
     <title>ToDo-List</title>
 </head>
@@ -16,6 +17,7 @@
                 <div class="col col-lg-8 col-xl-6">
                     <div class="card rounded-3">
                         <div class="card-body p-4">
+
                             <!-- 로그인 폼 -->
                             <form id="loginForm">
                                 <div class="input-group mb-3">
@@ -32,14 +34,15 @@
                                 <!-- 인사말 -->
                                 <p id="greeting" class="h2 fw-bold"></p>
                                 
+                                <!-- 시간 -->
                                 <div id="clockBox" class="text-muted pb-2">
                                     <h2 id="clock" class="fs-6">0000.00.00</h2>
                                 </div>
 
+                            <!-- 로그인 이후 출력되는 컨텐츠들 -->
                             <div id="contents" class="hidden">
-                                <!-- 시간 -->
 
-                                <!-- 안내문 -->
+                                <!-- 명언들 -->
                                 <div id="quote" class="divider d-flex align-items-center">
                                     <span></span>
                                     <span></span>
@@ -60,6 +63,7 @@
                                 </form>
                                 <ul id="todo-list" class=></ul>
 
+                                <!-- 날씨 API 연동 -->
                                 <div class="divider d-flex align-items-center my-4">
                                     <p class="text-center mx-3 mb-0">Today weather :</p>
                                     <div id="weather">
@@ -82,6 +86,7 @@
     <script src="js/todo-list.js"></script>
     <script src="js/weather.js"></script>
 
+    <!-- bootstrap 연동 -->
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script src="bootstrap/js/bootstrap.js"></script>
     
